# kicad-pcb-api

./: .coveragerc  .gitignore  .gitmodules  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CONTEXT-PORTAL.md  DRC_IMPLEMENTATION_SUMMARY.md  FILE_IO_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROGRESS_SUMMARY.md  README.md  REFACTORING_PLAN.md  pyproject.toml
.claude/: commands
.claude/commands/: build.md  release-pypi.md  test.md  umb.md
.claude/commands/dev/: review-implementation.md  run-tests.md
.claude/commands/test/: run-reference-pcbs.md
.github/workflows/: format-check.yml  publish.yml  test.yml
.memory_bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
.memory_bank/features/: README.md
docs/: ARCHITECTURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_ROADMAP.md
mcp-server/: package.json  tsconfig.json
mcp-server/src/: index.ts
python/examples/: basic_usage.py
python/kicad_pcb_api/collections/: __init__.py  footprints.py  tracks.py
python/tests/: test_collections_tracks.py  test_collections_vias.py
reference-pcbs/: NOTES_TEMPLATE.md  README.md  create_reference.sh
reference-pcbs/01-basic-structure/01-blank-pcb/: notes.md  project.kicad_pro
reference-pcbs/01-basic-structure/05-edge-cuts-rectangle/: notes.md  project.kicad_pcb
reference-pcbs/02-zones/09-copper-pour-simple/: notes.md  project.kicad_pcb
reference-pcbs/02-zones/10-copper-pour-polygon/: notes.md  project.kicad_pcb
reference-pcbs/02-zones/11-keepout-zone-simple/: notes.md  project.kicad_pcb
reference-pcbs/02-zones/61-ruled-area/: notes.md  project.kicad_pcb
reference-pcbs/03-silkscreen/14-silkscreen-text-simple/: notes.md  project.kicad_pcb
reference-pcbs/03-silkscreen/15-silkscreen-logo-simple/: notes.md  project.kicad_pcb
reference-pcbs/04-components/16-single-resistor-0603/: fp-info-cache  notes.md  project.kicad_pcb
reference-pcbs/04-components/17-single-capacitor-0603/: notes.md
reference-pcbs/04-components/18-two-resistors-series/: notes.md
reference-pcbs/04-components/19-resistor-capacitor-rc/: notes.md
reference-pcbs/04-components/20-single-ic-soic8/: notes.md
reference-pcbs/05-routing/24-single-trace-straight/: notes.md  project.kicad_pcb
reference-pcbs/05-routing/25-single-trace-curved/: notes.md  project.kicad_pcb
reference-pcbs/05-routing/26-two-traces-parallel/: notes.md  project.kicad_pcb
reference-pcbs/05-routing/27-multi-layer-routing/: notes.md  project.kicad_pcb
reference-pcbs/06-vias/30-single-via-through/: notes.md  project.kicad_pcb  project.kicad_prl
reference-pcbs/06-vias/32-via-array-grid/: notes.md  project.kicad_pcb
reference-pcbs/06-vias/32-via-blind/: notes.md  project.kicad_pcb
scripts/: create_phase1_references.py
src/: .gitignore  patch_pcb_board.py  setup.py
src/examples/: file_io_example.py  parser_demo.py  placement_example.py
src/kicad_pcb_api/: README.md  __init__.py
src/tests/: test_board_integration.py  test_collections_base.py  test_collections_footprints.py  test_collections_zones.py  test_complete_workflow.py  test_drc_manager.py  test_file_io.py  test_footprint_operations.py  test_formatter.py  test_manager_integration.py  test_parser.py  test_parser_registry.py  test_pcb_board.py  test_reference_exact_format.py  test_reference_pcbs.py  test_track_operations.py  test_via_operations.py  test_wrappers_footprint.py  test_wrappers_zone.py  test_zone_operations.py
(+84 files in other folders)
