[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-pcb-api"
version = "0.1.1"
description = "Professional KiCAD PCB Manipulation Library with File-Based Operations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Circuit-Synth Team", email = "contact@circuit-synth.com" }
]
keywords = [
    "kicad",
    "pcb", 
    "electronics",
    "eda",
    "circuit-design",
    "automation",
    "routing",
    "placement",
    "ai-integration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "sexpdata>=0.0.3",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
routing = [
    "docker>=6.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/circuit-synth/kicad-pcb-api"
Documentation = "https://kicad-pcb-api.readthedocs.io"
Repository = "https://github.com/circuit-synth/kicad-pcb-api"
Issues = "https://github.com/circuit-synth/kicad-pcb-api/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/kicad_pcb_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kicad_pcb_api",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=kicad_pcb_api",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests with file I/O (end-to-end workflows)",
    "format: Format preservation tests",
    "drc: Design rule check tests",
    "placement: Placement algorithm tests",
    "routing: Routing tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "B", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/**" = ["S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]
